Changing index, edited 2shakes,conways, dimmu,everest, mybank, mywork
Read over and editing all pages completed

--- a/2Shakes.html
+++ b/2Shakes.html
@@ -58,9 +58,9 @@
     <!-- Contact me buttons ------------------------------>
     <div class="centerWrap">
         <h1 class="w">2Shakes CX Redesign</h1>
-        <p>This project aims to improve the profile setup step of 2Shakes web application. The 2Shakes software is
+        <p>This project aimed to improve the profile setup step of 2Shakes web application. The 2Shakes software is
             centralised around the idea of automating the currently paper-based processes that many bookkeepers and
-            accountants undergo. By improving the profile set up phase of the system accomplish an efficient,
+            accountants undergo. By improving the profile set up phase of the system accomplishes an efficient,
             user-friendly profile setup process as well as a visually appealing UX allowing for an intuitive process.
             By achieving these goals, 2Shakes will be able to overcome the barriers, such as converting customers on
             trial to paying customers.
@@ -75,24 +75,23 @@
         <h2>Team Oscar</h2>
         <p>Known as <b>Team Oscar</b>, we were a team of 4 passionate Information Systems students working on the
             2Shakes improving the profile signup process. </p>
-        <p style="color: #0F78C3;"><b>Priya Modi </b><em> (Project Manager and Requirements Leader)</em></p>
-        <li style="color: black;">Priya's role was to ensuring the team is on track and meeting the deadlines set out
-            by the course and project sponsor. Also part of her role was to define requirements through discussion and
-            research with sponsors, and the end solution satisfies the sponsor's needs.
-        </li>
-        <p style="color: #0F78C3;"><b>Vrutika Patel </b><em> (Client Liaison) </em></p>
-        <li style="color: black;">Vrutika role was to keep sponsor updated through emails on progress and ensure that
-            documentation is up to date.
-        </li>
         <p style="color: #0F78C3;"><b>Caradine Sangalang </b><em> (Design Leader) </em></p>
-        <li style="color: black;">Caradine's role was to ensure that the design satisfies the requirements set out and
+        <li style="color: black;">Caradine's role was to ensure that the design satisfies the requirements set out while
             developing processes and procedures to support and improve to the design.
+        </li>
+        <p style="color: #0F78C3;"><b>Priya Modi </b><em> (Project Manager and Requirements Leader)</em></p>
+        <li style="color: black;">Priya's role was to ensuring the team was on track and meeting the deadlines set out
+            by the course and project sponsor. Also part of her role was to define requirements through discussion and
+            research with sponsors.
         </li>
         <p style="color: #0F78C3;"><b>Smeet Patel [myself] </b><em> (Construction Leader) </em></p>
         <li style="color: black;">My role was to ensure that the solution follows closely to the design and making
             decisions about technologies used. I also had to Liaise with design leader if any issues come up when
-            constructing the solution o prototype and Liaise with requirements leader if a requirement may be
+            constructing the solution o prototype while liaising with requirements leader if a requirement may be
             jeopardised as a result of problems in creating the solution.
+        </li>
+        <p style="color: #0F78C3;"><b>Vrutika Patel </b><em> (Client Liaison) </em></p>
+        <li style="color: black;">Vrutika role was to keep sponsor updated through emails on progress.
         </li>
         <h2>The project Sponsors (2Shakes) </h2>
         <p>The Project sponsors of the CX redesign project was <b>Mike Kelly</b>, the CEO of 2Shakes and <b>Ata
@@ -114,8 +113,8 @@
         <div id="towire"></div>
         <br>
         <h2 class="w2">Initial Wireframes</h2>
-        <p>As a group, we choose to design our own wireframes because this allowed us to represent more concept to
-            2Shakes at the meeting and we each had slightly different taste to design, so it was great we see everyone
+        <p>As a group, we chose to design our own wireframes because this allowed us to represent more concepts to
+            2Shakes at the meeting and we each had slightly different taste to design, so it was great we see everyones
             perspective and implementation. </p>
         <img src="2shakes/inital wireframe overview.PNG" alt="Wireframes overview" class="cenimg" style="max-width: 800px"><br>
         <p>Above is an overview of the wireframe design by each member of the team starting off with Caradine's
@@ -147,7 +146,7 @@
                 frameborder="0" width="793" height="1152" allowfullscreen="true" mozallowfullscreen="true"
                 webkitallowfullscreen="true"></iframe>
         </div>
-        <p>For our next meet with the project sponsor (Week 6, we got feedback on the latest wireframe which based on
+        <p>For our next meet with the project sponsor (Week 6, we got feedback on the latest wireframe which was based on
             Priya's initial wireframe. During the meeting, we annotated the wireframe design as shown in the slides
             above. Based on Priya's wireframes we improved and refined the wireframes depending on each member comments
             from the initial individual wireframe.</p>
@@ -158,7 +157,7 @@
             wireframe with a different concept which is both user-friendly and aesthetically pleasing. </p>
         <p>The current UI trends were using tiles, gradient colours, a lot of white space that emphasised minimalistic
             design.</p>
-        <p>Some of the key features which we planned to focus on was the navigation flow, implementation of tools and
+        <p>Some of the key features which we planned to focus on where the navigation flow, implementation of tools and
             tips widget which allows users to access additional information, breaking down the form into understandable
             bit size features. </p>
         <p style="color: #0F78C3">Concept 1 (chevron progress navigation with the banner on the top):</p>
@@ -172,7 +171,7 @@
             down each step into subsection and use tiles on the left. </p>
         <p style="color: #0F78C3">Concept 3 (Dropdown navigation):</p>
         <img src="2shakes/cleanui concept opened.png" alt="New concept" class="cenimg" style="max-width: 1000px"><br>
-        <p>Design 3 above is inspired from Google Drive's side navigation that has minimalistic drop-down navigation
+        <p>Design 3 above was inspired from Google Drive's side navigation that has minimalistic drop-down navigation
             with icons that globally recognised for better recognition and recall. </p>
         <h3>Mid-break team meeting </h3>
         <p>After I had finished designing the quick concept, we as a team met up, to discuss the design and decided to
@@ -193,7 +192,7 @@
             side the tools and tips can be minimised. </p>
         <h3>Meeting With Mike (Sponsor) </h3>
         <p>During the university break, we emailed Mike the project sponsor to have a look at our concepts, and he
-            collated all the design and presented his own version of the UI patterns or wireframes.</p>
+            collated all the designs and presented his own version of the UI patterns or wireframes.</p>
         <div class="video-container1" style="text-align: center;">
             <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSbKoiZb7TP6mcOYHn9t5mnF8FkDDhj3gAQaEYcUBOcGLKU6x4HzlRAX3PQsv2dIewnEwgxrarlHYJU/embed?start=true&amp;loop=true&amp;delayms=2000"
                 width="1280" height="749" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
@@ -243,7 +242,7 @@
             in terms of age, profession, gender etc. It was important that we got feedback from a mix of people as it
             meant our design could be critiqued from different perspectives. The feedback we got was remarkably
             positive in the sense that our project was able to be perceived as quite easy to use, visually appealing
-            and overall an effective sign-up process. This was supported by facts such as users were able to locate the
+            and overall an effective sign-up process. This was supported by facts such as users being able to locate the
             information we asked for, they found the colours complemented the 2shakes brand and worked well and lastly
             there were many aspects in the design that supported the user throughout the process (e.g. Tools & Tips,
             Sub and Main Navigation bar etc). </p>
@@ -258,7 +257,7 @@
             were able to deliver and satisfy our sponsors.</p>
         <h4>Team Success</h4>
         <p>The team being in sync was an essential factor that we tried to sustain during the duration of the project.
-            Being successful was an important agenda we made clear in the beginning, so thankfully that was a good
+            Being successful was an important agenda which we made clear in the beginning, so thankfully that was a good
             starting point for our team to connect. We were successful in many aspects working together as we all
             valued what one another had to offer and although there were problems concerning scheduling or coming to a
             decision, we were able to persevere and overcome this through mutual consensus.</p>
@@ -266,7 +265,7 @@
             something each of us contributed or offered to the final project. As a team, this was important to hear,
             and we were pleased with how our customers responded, as sponsor approval was a critical factor that aided
             us, in determining then, if our project was a success.</p>
-        <p>Overall our team is satisfied with the way things turned out within the limited time we had, and we are
+        <p>Overall our team was satisfied with the way things turned out within the limited time we had, and we are
             pleased to have met client satisfaction as this was an enabling factor in acknowledging the status of our
             project to be regarded as successful.</p>
         <div class="video-container1" style="text-align: center;">
