--- a/Conway'sGameofLife.html
+++ b/Conway'sGameofLife.html
@@ -57,7 +57,7 @@
         <a id="gitbutton" href="https://github.com/smeet-patel/Conways-Game-Of-Life-Project" target="_blank"><i class="fa">&#xf09b;</i>
             Open Project on GitHub (Source Code)</a>
         <p>Our task was to, as a group, design an OOP based on Conway’s Game of Life, incorporating the knowledge we
-            had gathered in SWEN501 and utilising JavaFX. In summary, this meant that we needed to create a GUI that a
+            had gathered in SWEN501 and utilising JavaFX. In summary, this meant we needed to create a GUI that a
             user could interact with and build the functionality around this to enable them to do so.</p>
         <p>Briefly, Conway’s Game of Life works by having an infinite 2D grid of cells, each of which is either ‘alive’
             or ‘dead’. These cells are displayed on the screen, and how they are generated and destroyed over time
@@ -148,7 +148,7 @@
             our classes and how messages were communicated between these.</p>
         <h1 class="w">Implementation</h1>
         <h2>Day 1</h2>
-        <p>The implementation of our project went very smoothly as we ensured we were organised and focussed on the
+        <p>The implementation of our project went very smoothly as we ensured we were organised and focused on the
             tasks we needed to achieve from the very beginning. Our first sprint, to achieve by the end of the day on
             Monday, was to produce a minimum viable product - version one of the game - with a basic user interface and
             a grid of cells. As mentioned previously, we began this process by individually researching the background
@@ -200,8 +200,8 @@
         <p>Our final day was largely spent editing and refining our code, report and presentation together as a group,
             as well as presenting our thus-far-completed programme to the cohort.</p>
         <h1 class="w">Refection </h1>
-        <p>We are very happy with the final outcome of our project and feel that we successfully managed to incorporate
-            into it each of the key aspects of Conway’s original Game of Life, as well as add additional features and
+        <p>We were very happy with the final outcome of our project and feel that we successfully managed to incorporate
+            into each of the key aspects of Conway’s original Game of Life, as well as add additional features and
             aesthetics to enhance our users’ experience. </p>
         <p>Our team functioned and collaborated very well as a group, providing support and assistance to each other
             when needed. We all felt very motivated to achieve a great end result, which we believe is clear in the way
