--- a/aboutme.html
+++ b/aboutme.html
@@ -93,7 +93,7 @@
                 creative minded person, I enjoy thinking about new ways to improve things, to build solutions for
                 issues. I believe that to predict the future; you have to create the future or very much be part of the
                 forefront of changing technology and being innovative.</p>
-            <p style="color: black">Currently, I am working on updating and adding past projects to the website,
+            <p style="color: black">Currently, I am working on updating and adding past projects to the website and
                 enhancing the
                 user experience. Along with the site, I am learning Android Studio and looking to convert java
                 applications to Android apps. I am also planning to make a native application for construction
@@ -181,7 +181,7 @@
                                             <li>Running a help desk targeted for Maori and Pacifica students </li>
                                         </dd>
                                         <dd>
-                                            <li>Grading of assessment</li>
+                                            <li>Grading of assessments</li>
                                         </dd>
                                         <dd>
                                             <li>Content creatation such games for student learning and participation</li>
@@ -247,9 +247,9 @@
                 <div class="collapsible-content2">
                     <div class="content-inner2">
                         <li><b>ACCY 223 Class Representative (Class Rep)</b><br>
-                            <p style="color: black"> My responsible as a Student Representative (Class Rep) for the
+                            <p style="color: black"> As a Student Representative (Class Rep) for the
                                 course paper Management
-                                Accounting, was to facilitate in communication between students and lecturers,
+                                Accounting, I was to facilitate in communication between students and lecturers,
                                 directing
                                 course feedback to the course Administrator/ Coordinator and assisting students with
                                 any
@@ -263,19 +263,19 @@
                         <hr>
                         <li>
                             <b>INFO 141 Class Representative (Class Rep)</b><br>
-                            <p style="color: black">My responsible as a Student Representative (Class Rep) for course
+                            <p style="color: black">As a Student Representative (Class Rep) for course
                                 paper Systems Analysis
-                                (INFO 141), was to facilitate in communication between students and lecturers,
+                                (INFO 141) I was to facilitate in communication between students and lecturers,
                                 directing
                                 course feedback to the course Administrator/ Coordinator and assisting students with
                                 any
                                 concerns. </p>
                             <span style="color: black"></span>Some of the additional responsibilities involved:</span>
                             <dd>
-                        <li>Negotiation of the project date submission to be changed.</li>
+                        <li>Negotiation of the project date submission to be more realistic to be more realistic of the high quality work expected.</li>
                         </dd>
                         <dd>
-                            <li>Requesting for clarification on assignment and the details for students. </li>
+                            <li>Requesting for clarification on assignments and the details for students. </li>
                         </dd>
                         </li>
                         <hr>
