--- a/dimmuBurger.html
+++ b/dimmuBurger.html
@@ -71,19 +71,20 @@
         </p>
         <h2>Project Team: </h2>
         <ul class="dark">
-            <li><b>Smeet (Myself):</b> I was the Lead Web Developer (Produced exciting the web application, created
-                content,
-                set-up the SQL databases for website and Production line app, research about the intergation
-                technology)</li>
+            
             <li><b>Fiona: </b>Lead Java Developer (Assisted and help other members and looked over the production line
                 Java Application)</li>
+            <li id="planning"><b>Heba: </b> Java GUI Developer (produced the production line login GUI and learning
+                    basics.</li>
             <li><b>Kelly: </b>Implementation Officer (implemented the Heroku database to bothe the applications and
                 hosted set up hosting on heroku as well, also help debug web application and style the
                 web application)</li>
             <li><b>Sinny: </b>Content Manager (produce some content & gathered icons and helped in the production line
                 application.</li>
-            <li id="planning"><b>Heba: </b> Java GUI Developer (produced the production line login GUI and learning
-                basics.</li>
+                <li><b>Smeet (Myself):</b> I was the Lead Web Developer (Produced exciting the web application, created
+                content,
+                set-up the SQL databases for website and Production line app, research about the intergation
+                technology)</li>
         </ul>
         <h1 class="w">Planning</h1>
         <h2>Project Deliverables</h2>
@@ -299,7 +300,7 @@
         <h2>Integration </h2>
         <h3 style="color: orange">Heroku </h3>
         <p>Heroku is a cloud platform for hosting web applications and databases. We chose to use Heroku because we
-            thought that it would be a good way for everyone to access everything from everywhere. We looked into a few
+            thought that it would be a good way for everyone to access everything from anywhere. We looked into a few
             other hosting options at the time such as Google FireBase, with which you can also host web applications
             for free, but ultimately chose to use Heroku because we also wanted to use a SQL database with a schema.</p>
         <p>To get started with Heroku we followed the documentation explaining how to host a PHP project with Heroku
@@ -311,7 +312,7 @@
             Database. Looking at our options, we could have either changed it to PostGres or PDO - which has the
             benefit of having drivers available for many different SQL databases and also seemed to be better regarding
             security and the risk of SQL injection as PDO uses prepared statements when connecting to the database.
-            Overall though we would need more time to look into different security risks to say that our website is
+            Overall, though we would need more time to look into different security risks to say that our website is
             truly secure.</p>
         <h3 style="color: orange">AJAX</h3>
         <p>One challenging thing that we wanted to do was to display when the status of a burger changes from ‘new’ to
