--- a/everest.html
+++ b/everest.html
@@ -68,12 +68,14 @@
 			work (web content/ website). </p>
 		<h3 style="color: orange">Brief Overview of my Android Development Journey (projects)</h3>
 		<p>My first Android application was a string to the binary converter which allows the user to input string do words
-			and on submit the application will display the binary number for each word individually. This application had one
-			single constrain layout with basic function with edit view, text view and buttons.</p>
-		<p>My second application was a number guessing game, which user guess the correct random number and they would be
+			and on submit the application will display the binary number for each word individually. 
+			<!-- This application had one single constrain layout with basic function with edit view, text view and buttons. -->
+		</p>
+		<p>My second application was a number guessing game, in which user guesses the correct random number and they would be
 			redirected to another activity if the guess is correct. It wouldn’t be right to call this a game without an element
-			of gamification, so I also implemented as scoring system and hints and also to improve usability the high and lower
-			guesses would also be displayed on the screen. For this application I learnt advantages of linear layout and how to
+			of gamification, so I also implemented a scoring system and hints to improve usability. 
+			<!-- the high and lower guesses would also be displayed on the screen. -->
+			 For this application I learnt advantages of linear layout and how to
 			<span id="faq"></span>save the UI state with ‘onSaveInstance’ and how to prevent losing information when the screen
 			is rotated. </p>
 		<h1 class="w">Features (Getting Started FAQ)</h1>
@@ -188,7 +190,7 @@
 				</div>
 			</div>
 		</div>
-		<p>The user can also share the current webpage URL with anyone on any most messaging application such as Whatsapp,
+		<p>The user can also share the current webpage URL with anyone on most messaging applicatiosn such as Whatsapp,
 			Message (SMS app) and email. </p>
 		<h3 style="color: orange">Device Orientation</h3>
 		<div style="margin: 0 auto;max-width: 800px; width: 100%;">
@@ -201,17 +203,17 @@
 		</div>
 		<p>Android application is based on the 'Activity Lifecycle' and every time the device orientation changes, the
 			application will restart unless the state of the application has been saved. As I have programmed the app to save
-			<span id="reflection"></span><br>the state, this enables the device to change orientation without losing the
+			<span id="reflection"></span>the state, this enables the device to change orientation without losing the
 			information such as the current webpage
 			and will successfully reload the webpage. </p>
 		<h1 class="w">reflection</h1>
-		<p>Overall, I gain a comprehensive understanding of the WebView class, Android App bar with a search bar, intents,
+		<p>Overall, I gained a comprehensive understanding of the WebView class, Android App bar with a search bar, intents,
 			layouts, listeners, custom list and layout versus activity. I am very pleased with this project and without a doubt
 			this has been one of my greatest challenges from an IT perspective. Even after several months, I am using this as my main web browser on my
-			smartphone and this because it is user friendly, has a aesthetically pleasing and simple UI as of the fully
-			integrated app bar. One thing I forgot to implement was a print function to print the content of the WebView which I
-			came across reading for another Android project. I one day hope to be a successful mobile application developer and
-			create application that one could only imagine and makes our life’s easier. </p>
+			smartphone, this because it is user friendly, has a aesthetically pleasing effect and simple UI as of the fully
+			integrated app bar. 
+			<!-- One thing I forgot to implement was a print function to print the content of the WebView which I came across reading for another Android project. -->
+			 I one day hope to be a successful mobile application developer and create application that one could only imagine and makes our life’s easier. </p>
 		<hr>
 		<a id="gitbutton" href="https://github.com/smeet-patel/oneWeb-browser-V-Everest" target="_blank"><i class="fa">&#xf09b;</i>
 			Open Project on GitHub (Source Code)</a>
