--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
     <!---------------------------------------------------------->
     <!-- Index Page Banner ------------------------------------->
     <br>
-    <img src="Webimages/mybanner2.PNG" alt="Smeet" class="cenBanner">
+    <img src="Webimages/mybanner4.PNG" alt="Smeet" class="cenBanner">
     <img src="Webimages/myAvatar.jpg" alt="Smeet" class="cenBanner1">
     <p align="center" class="centText" style="color: #0F78C3">Hello! My name is <b><em>Smeet</em></b>.</p>
     <p class="centText" align="center">
-        Being an aspiring software developer, I am passionate about web and mobile development. I like to bring
-        innovation and change together.
+        Being an aspiring software developer and keen adventurer, I am passionate about web and mobile development. 
+        I believe solutions should reflect innovation of the modern day.
+        <!-- Being an aspiring software developer, I am passionate about web and mobile development. I like to bring
+        innovation and change together. -->
 
         <!-- I am passionate about web and mobile development.  -->
         <!-- I am a travel enthusiast. An aspiring software developer. -->
@@ -83,8 +85,9 @@
             <!--second col-------------->
             <div class="column">
                 <div class="hoverOverImage">
-                    <img src="Webimages/bugworld.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
-                    <a href="mywork.html">
+                        <img src="projects/everest/everest_banner_MyWork.png" alt="Everest, Native App" class="hoverOverImage-layer_bottom" id="conner_round">
+                    <!-- <img src="Webimages/bugworld.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round"> -->
+                    <a href="everest.html">
                         <div class="hoverOverImage-layer_top">
                             <div class="hoverOverImage-text">NATIVE APP</div>
                         </div>
