--- a/mybank.html
+++ b/mybank.html
@@ -57,8 +57,8 @@
                 class="fa">&#xf09b;</i>
             Open Project on GitHub (Source Code)</a>
         <p>I wanted to explore python and C# programming languages by creating two almost identical console base
-            banking system application with simple features such as adding a new customer and account, deleting a
-            record, modifying details, and bankers can look the records of all customers. As well as transferring
+            banking system applications with simple features such as adding a new customer and account, deleting a
+            records, modifying details, and allowing bankers to look the records of all customers. this allowed for transferring
             payments from one customer to another, clearing and accepting a cheque. Also, for python, I made a
             real-time currency conversion using APIs. </p>
         <p>The design of the application was designed to allow the user to input a number which corresponds to a
@@ -70,7 +70,7 @@
             industry and this is evident in a recent article related to GitHub usage (they are 3rd and 6th most used
             languages respectively). </p>
         <h1 class="w">Python</h1>
-        <li>Overall, python was more natural to learn and was unique as it was different to JAVA or C# and had no curly
+        <li>Overall, python was more natural to learn and was unique as it was different to JAVA or C# due to had no curly
             braces, therefore correctly indenting the code was crucial. </li>
         <li>Python was easier to implement the APIs in JSON format and works better with most data types. </li>
         <li>I learnt that I had to cast numeric values input into int or float when storing or programming mathematical
@@ -83,31 +83,32 @@
         <li>I was also able to implement a real time currency conversion calculator from one currency to another by
             accessing a JSON file online. This was possibly my biggest challenge in python as I had to convert
             retrieving the exchange rate and program the operations. </li>
-        <li>One of the programming elements I did compromise in this python version having a type check had implemented
+        <!-- <li>One of the programming elements I did compromise in this python version having a type check had implemented
             in my C# version. </li>
         <li>Also, for the currency converter, it would have been ideal to store a list of all the currency code so the
-            if the user enters an invalid, they asked to enter a valid currency code to proceed. </li>
-        <li>Overall, I really Enjoyed programming in python and in the future, I would use Python for machine learning
+            if the user enters an invalid, they asked to enter a valid currency code to proceed. </li> -->
+        <li>Overall, I really enjoyed programming in python and in the future, I would use Python for machine learning
             <span id="cprograming"></span>
-            projects and participate in Kaggle competitions, where python is used because it is more powerful when
-            constructing mathematical models and creating algorithms.</li>
+            projects and participate in Kaggle competitions.
+            <!-- where python is used because it is more powerful when constructing mathematical models and creating algorithms. -->
+        </li>
         <h1 class="w">C#</h1>
         <li>After developing the application in Python, I chose to build the application in C# which was similar to
-            Java because it is an object-oriented language and is Microsoft responses to Java.</li>
-        <li>C# has some subtle differences such as the main method, declaring constants, foreach statements, print
-            statements for system.out. Print vs. Console.Writeline for C#.</li>
-        <li>In C# I also wrote multiple classes in a single file, which proved to adventurous while creating the custom
+            Java because it is an object-oriented language and Microsoft response to Java.</li>
+        <!-- <li>C# has some subtle differences such as the main method, declaring constants, foreach statements, print
+            statements for system.out. Print vs. Console.Writeline for C#.</li> -->
+        <li>In C# I also wrote multiple classes in a single file, which proved adventurous while creating the custom
             class object for the list because I was able to match the variable better the switching file while
             programming. </li>
-        <li>The basic principles for C# were similar to JAVA and writing and reading from the console was the more
+        <li>The basic principles for C# were similar to JAVA. Writing and reading from the console was the more
             preferred way for me (rather than having a scanner), but I struggled using a list in C# because of the
             custom class object and writing the setter and getter because it was different to JAVA.</li>
         <span id="summary"></span>
-        <li>One of extension for python was the exchange rate converter, which I did not implement because of time
+        <li>One extension for python was the exchange rate converter, which I did not implement because of time
             constraints and complexity. </li>
         <h1 class="w">Summary </h1>
-        <p>Overall, Python was more straightforward to learn and is instantaneous or faster for development. While in
-            C# the program needs a main method to run the application. Most of my skills in Java were transferable to
+        <p>Overall, Python was more straightforward to learn and is instantaneous for development. While in
+            C#, the program needs a main method to run the application. Most of my skills in Java were transferable to
             C# because they are both object orientated programming languages. For more extensive and visual application
             - C# would be more preferred, while, for data or mathematical application python would be more suitable.</p>
         <hr>
