--- a/mywork.html
+++ b/mywork.html
@@ -90,7 +90,7 @@
                      </div>
                      <article class="card__article">
                         <h3><a href="2Shakes.html">2Shakes CX Redesign</a></h3>
-                        <p>A team project which we redesigned the user interface and experience by creating a
+                        <p>A team project in which we redesigned the user interface and experience by creating a
                            high-fidelity prototype for setting up a new profile for the 2Shakes web application.</p>
                      </article>
                   </div>
@@ -113,7 +113,7 @@
                         </div>
                         <article class="card__article">
                            <h3><a href="Conway'sGameofLife.html">Conway's Game of Life</a></h3>
-                           <p>In team a designing & developing JavaFX application for Conway's Game of Life. Facing challenges with git lab and merge conflicts.</p>
+                           <p>In a team designing & developing JavaFX application for Conway's Game of Life. Facing challenges with git lab and merge conflicts.</p>
                         </article>
                      </div>
                   </div>
@@ -137,7 +137,7 @@
                      <article class="card__article">
                         <h3><a href="everest.html">Everest Andriod Web Broswer </a></h3>
                         <p>Everest is web browser for all Android devices which simplifies and enhance the web browsing
-                           experience. My vision to become an Android developer. </p>
+                           experience. It reflects my vision to become an Android developer. </p>
                         <br>
                      </article>
                   </div>
