Missing git link

--- a/CyberCV.html
+++ b/CyberCV.html
@@ -58,8 +58,9 @@
     <div class="centerWrap">
         <!-- project link button -->
         <a id="butproto" href="https://smeet-patel.github.io/Cyber-CV.-Where-do-yourself-in-3-years--My-website-"
-            target="_blank">View
-            My Cyber CV (2015)</a>
+            target="_blank">View My Cyber CV (2015)</a><br>
+            <a id="gitbutton" href="https://github.com/smeet-patel/Cyber-CV.-Where-do-yourself-in-3-years--My-website-" target="_blank"><i class="fa">&#xf09b;</i>
+                Open Project on GitHub (Source Code)</a><br>
         <p>As a requirement of an Information System 101 course in 2015 at Victoria University of Wellington, we were
             tasked to developed a
             Cyber CV using basic
@@ -150,7 +151,9 @@
         <a id="butproto" href="https://smeet-patel.github.io/Cyber-CV.-Where-do-yourself-in-3-years--My-website-"
             target="_blank">View
             My Cyber CV (2015)</a>
-
+            <br>
+            <a id="gitbutton" href="https://github.com/smeet-patel/Cyber-CV.-Where-do-yourself-in-3-years--My-website-" target="_blank"><i class="fa">&#xf09b;</i>
+                Open Project on GitHub (Source Code)</a><br>
     </div>
 
     <br>
