--- a/dimmuBurger.html
+++ b/dimmuBurger.html
@@ -59,7 +59,9 @@
             with a separate <b>java
                 application</b> that displays the order to the kitchen production line and also allows the aimin staff
             to reorder ingredients. </p> -->
-        <a id="butproto" href="https://dimmuburgers.herokuapp.com/" target="_blank">View Dimmu Burger Web Application</a>
+        <a id="butproto" href="https://dimmuburgers.herokuapp.com/" target="_blank">View Dimmu Burger Web Application</a><br>
+        <a id="gitbutton" href="https://github.com/smeet-patel/DimmuBurgerProject" target="_blank"><i class="fa">&#xf09b;</i>
+            Open Project on GitHub (Source Code)</a>
         <h2>Project Summary </h2>
         <p>This project is an application development for a (fictitious) burger restaurant in Wellington which aims to
             allow customers to create a custom burger in a user-friendly manner. We have implemented a database to
@@ -71,17 +73,17 @@
         </p>
         <h2>Project Team: </h2>
         <ul class="dark">
-            
+
             <li><b>Fiona: </b>Lead Java Developer (Assisted and help other members and looked over the production line
                 Java Application)</li>
             <li id="planning"><b>Heba: </b> Java GUI Developer (produced the production line login GUI and learning
-                    basics.</li>
+                basics.</li>
             <li><b>Kelly: </b>Implementation Officer (implemented the Heroku database to bothe the applications and
                 hosted set up hosting on heroku as well, also help debug web application and style the
                 web application)</li>
             <li><b>Sinny: </b>Content Manager (produce some content & gathered icons and helped in the production line
                 application.</li>
-                <li><b>Smeet (Myself):</b> I was the Lead Web Developer (Produced exciting the web application, created
+            <li><b>Smeet (Myself):</b> I was the Lead Web Developer (Produced exciting the web application, created
                 content,
                 set-up the SQL databases for website and Production line app, research about the intergation
                 technology)</li>
@@ -364,7 +366,8 @@
             </ul>
         </ul>
         <h3 style="color: orange">Conclusion </h3>
-        <p>Overall, we were happy with the final outcome of our project and feel that we successfully managed to incorporate the
+        <p>Overall, we were happy with the final outcome of our project and feel that we successfully managed to
+            incorporate the
             main functionality for the two applications while having a strong emphasis for user experience for the web
             app. </p>
         <p>Our team functioned and collaborated very well as a group, providing support and assistance to each other
@@ -377,7 +380,11 @@
             for all devices and made the build based on the usability heuristic. If I was to do a similar project
             again, I would like to like to Explore Google Firebase to store the inventory information and sales
             records.</p>
+        <hr><br>
     </div>
+    <a id="butproto" href="https://dimmuburgers.herokuapp.com/" target="_blank">View Dimmu Burger Web Application</a><br>
+    <a id="gitbutton" href="https://github.com/smeet-patel/DimmuBurgerProject" target="_blank"><i class="fa">&#xf09b;</i>
+        Open Project on GitHub (Source Code)</a><br>
 
     <!-- footer ------------------------------>
     <footer class="footer">
